# git-tools

./: .gitignore  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  README.md  README_SUMMARY.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.cursor/rules/: specify-rules.mdc
.specify/memory/: constitution.md
specs/001-github-contribution-tools/: data-model.md  plan-us4a-local-agents.md  plan-us4b-multi-dimensional.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  user-story-4a-local-agents.md  user-story-4b-multi-dimensional-analysis.md
specs/001-github-contribution-tools/checklists/: requirements.md
specs/001-github-contribution-tools/contracts/: cli-contracts.md  github-api-contract.md  report-format-contract.md
src/github_tools/: __init__.py
src/github_tools/analyzers/: __init__.py  anomaly_detector.py  developer_analyzer.py  repository_analyzer.py  team_analyzer.py
src/github_tools/api/: __init__.py  client.py  rate_limiter.py
src/github_tools/cli/: __init__.py  anomaly_report.py  developer_report.py  pr_summary_report.py  repository_report.py  team_report.py
src/github_tools/collectors/: __init__.py  contribution_collector.py  pr_file_collector.py  pr_summary_collector.py
src/github_tools/models/: __init__.py  contribution.py  developer.py  repository.py  team.py  time_period.py
src/github_tools/reports/: generator.py
src/github_tools/summarizers/: __init__.py  context_analyzer.py  file_pattern_detector.py  llm_summarizer.py  (+1 more)
tests/: __init__.py
tests/contract/: test_anomaly_report_contract.py  test_developer_report_contract.py  test_llm_provider_contract.py  test_pr_summary_contract.py  test_pr_summary_multidimensional_contract.py  test_repository_report_contract.py  test_team_report_contract.py
tests/fixtures/: __init__.py  sample_contributions.json  sample_developers.json  sample_repositories.json
tests/integration/: test_anomaly_detection_flow.py  test_anomaly_recall.py  test_attribution_accuracy.py  test_batch_retry_logic.py  test_developer_report_flow.py  test_dimensional_accuracy.py  test_edge_cases.py  test_pr_summary_flow.py  test_pr_summary_local_agents.py  test_pr_summary_multi_dimensional.py  test_provider_detection.py  test_provider_fallback.py  test_repository_report_flow.py  test_team_report_flow.py
tests/performance/: test_dimensional_performance.py
tests/unit/: test_anomaly_detector.py  test_contributor_classification.py  test_developer_analyzer.py  test_pr_summarizer.py  test_repository_analyzer.py  test_team_analyzer.py
(+53 files in other folders)
